--- a/public/app.css
+++ b/public/app.css
@@ -1,1 +1,10 @@
-
+body {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+h1 {
+  color: green;
+}
